# RoboLearn

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  environment-gymrobotics.yml  environment-habitat.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/algo/: ddppo.yaml  her.yaml  ppo.yaml  sac.yaml
configs/encoder/: clip.yaml  dinov2.yaml  r3m.yaml  resnet_imagenet.yaml  scratch.yaml  vc1.yaml
configs/env/: fetch_pick_and_place.yaml  fetch_push.yaml  fetch_reach.yaml  fetch_slide.yaml  habitat_imagenav.yaml  habitat_pointnav.yaml
configs/experiment/: exp001_fetch_sac_her.yaml  exp002_her_strategy_sweep.yaml  exp003_fetch_pick_and_place.yaml  exp004_fetch_slide.yaml  exp005_fetch_reach.yaml  exp006_her_k_ablation.yaml  exp007_sac_no_her.yaml  exp008_her_difficulty_aware.yaml  exp009_her_rnd.yaml  exp010_pointnav_encoders.yaml
configs/sweep/: encoder_comparison.yaml  her_relabel_strategy.yaml
docs/: PLAN.md  lab_notebook.md  paper_notes.docx  paper_notes.md  reproduce.md  setup.md
docs/adr/: 0001-record-architecture-decisions.md
docs/experiments/: _TEMPLATE.md  exp001_fetch_sac_her.md  exp002_her_strategy_sweep.md  exp003_fetch_pick_and_place.md  exp004_fetch_slide.md  exp005_fetch_reach.md  exp006_her_k_ablation.md  (+3 more)
roborto/: __init__.py
scripts/: download_data.py  evaluate.py  launch_seeds.py  make_figures.py  make_paper_notes_docx.py  run_all_exps.py  sweep.py  train.py
tests/: test_buffer.py  test_config.py  test_her.py  test_metrics.py  test_registry.py  test_seeding.py  test_trainer_smoke.py
(+19 files in other folders)
